CHATS_SIT/force-app/main/default/objects/sfsit_t_sbsd_case_asset_hist__x.object
<CustomObject>
    <description>sfsit$t_sbsd_case_asset_hist</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>sfsit$t_sbsd_case_asset_hist</externalName>
    <fields>
        <fullName>cde_source_vrfyd_asset__c</fullName>
        <description>cde_source_vrfyd_asset</description>
        <externalDeveloperName>cde_source_vrfyd_asset</externalDeveloperName>
        <label>Asset verfied Source Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_type_verif__c</fullName>
        <description>cde_type_verif</description>
        <externalDeveloperName>cde_type_verif</externalDeveloperName>
        <label>Verification Type Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dte_change_last__c</fullName>
        <description>dte_change_last</description>
        <externalDeveloperName>dte_change_last</externalDeveloperName>
        <label>Last Modified date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dte_verfif__c</fullName>
        <description>dte_verfif</description>
        <externalDeveloperName>dte_verfif</externalDeveloperName>
        <label>verification date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>idn_case__c</fullName>
        <description>idn_case</description>
        <externalDeveloperName>idn_case</externalDeveloperName>
        <label>case id</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_sbsd_case_asset__c</fullName>
        <description>idn_sbsd_case_asset</description>
        <externalDeveloperName>idn_sbsd_case_asset</externalDeveloperName>
        <label>Asset ID</label>
        <length>50</length>
        <referenceTargetField>T_SBSD_CASE_ASSET__c.IDN_EXTNL__c</referenceTargetField>
        <referenceTo>T_SBSD_CASE_ASSET__c</referenceTo>
        <relationshipLabel>Case Asset Legacy History</relationshipLabel>
        <relationshipName>sfsit_t_sbsd_case_asset_hist</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>idn_sbsd_case_asset_hist__c</fullName>
        <description>idn_sbsd_case_asset_hist</description>
        <externalDeveloperName>idn_sbsd_case_asset_hist</externalDeveloperName>
        <label>Asset ID history</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_user_change_last__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>idn_user_change_last</description>
        <externalDeveloperName>idn_user_change_last</externalDeveloperName>
        <label>last modified by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>sfsit_t_sbsd_case_asset_hist</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>idn_user_vrfying__c</fullName>
        <description>idn_user_vrfying</description>
        <externalDeveloperName>idn_user_vrfying</externalDeveloperName>
        <label>User verification ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_has_asset__c</fullName>
        <description>ind_has_asset</description>
        <externalDeveloperName>ind_has_asset</externalDeveloperName>
        <label>Asset present</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_record_delete_logcl__c</fullName>
        <description>ind_record_delete_logcl</description>
        <externalDeveloperName>ind_record_delete_logcl</externalDeveloperName>
        <label>Logical Deleted Record</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nbr_liquid_amt__c</fullName>
        <description>nbr_liquid_amt</description>
        <externalDeveloperName>nbr_liquid_amt</externalDeveloperName>
        <label>Liquid Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nbr_non_liquid_amt__c</fullName>
        <description>nbr_non_liquid_amt</description>
        <externalDeveloperName>nbr_non_liquid_amt</externalDeveloperName>
        <label>Non Liquid Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nbr_seq_asset__c</fullName>
        <description>nbr_seq_asset</description>
        <externalDeveloperName>nbr_seq_asset</externalDeveloperName>
        <label>Asset sequence number</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nbr_seq_hist__c</fullName>
        <description>nbr_seq_hist</description>
        <externalDeveloperName>nbr_seq_hist</externalDeveloperName>
        <label>history sequence number</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Case Asset History</label>
    <pluralLabel>Case Asset History</pluralLabel>
</CustomObject>